objects/Training_Event_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Training_Topic__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <formula>Training_Topic__r.Topic__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event Contact</label>
        <referenceTo>Training_Event_Contact__c</referenceTo>
        <relationshipLabel>Training Event Topics</relationshipLabel>
        <relationshipName>Training_Event_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Topic__c</fullName>
        <label>Training Topic</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Training_Topic__c</referenceTo>
        <relationshipLabel>Training Event Topics</relationshipLabel>
        <relationshipName>Training_Event_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Event Topic</label>
    <nameField>
        <displayFormat>TT-{000000}</displayFormat>
        <label>Training Event Topic Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event Topics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>